--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -69,7 +69,7 @@ body {
     }
 
         header img {
-            width: 250px;
+            width: 15%;
             margin-bottom: 10px;
         }
 
