--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -339,7 +339,7 @@ body {
     }
 
         header img {
-            width: 200px;
+            width: 15%;
             margin-bottom: 10px;
         }
 
