--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -339,8 +339,9 @@ body {
     }
 
         header img {
-            width: 15%;
-            margin-bottom: 10px;
+            position: relative;
+            width: 20%;
+            padding-bottom: 10px;
         }
 
     .caixa-video-form {
