--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -69,7 +69,6 @@ body {
     }
 
         header img {
-            width: 15%;
             margin-bottom: 10px;
         }
 
@@ -339,9 +338,8 @@ body {
     }
 
         header img {
-            position: relative;
-            width: 20%;
-            padding-bottom: 10px;
+            width: 200px;
+            margin-bottom: 10px;
         }
 
     .caixa-video-form {
