--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -194,7 +194,7 @@
             <strong><s>R$ 590,00</s> R$ 295,00 <span>(Pré-Lançamento)</span></strong>
         </div>
         <span class="juros">4x Sem Juros</span>
-        <a href="/">Garanta 50% OFF no Pré-Lançamento</a>
+        <a href="https://mpago.la/1NKNCTH">Garanta 50% OFF no Pré-Lançamento</a>
         <span class="obs">* Promoção Válida apenas para o Pré-Lançamento, após lançamento o valor voltará a ser R$ 590,00.</span>
         <div class="cartao">
             <img src="~/img/pagamento.png" />
