--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -43,12 +43,28 @@
 
 
 
-                    <button class="btn btn-block btn-form">CADASTRAR</button>
+                    <button class="btn btn-block btn-form">Garanta 50% OFF no Pré-Lançamento</button>
 
                 </form>
 
             </div>
         </div>
+    </div>
+    <!--Investimento-->
+    <div class="caixa-investimento">
+
+        <h1>Investimento</h1>
+        <div class="valor">
+            <strong><s>R$ 590,00</s> R$ 295,00 <span>(Pré-Lançamento)</span></strong>
+        </div>
+        <span class="juros">4x Sem Juros</span>
+        @*<a href="/">Garanta 50% OFF no Pré-Lançamento</a>*@
+        @*<span class="obs">* Promoção Válida apenas para o Pré-Lançamento, após lançamento o valor voltará a ser R$ 590,00.</span>*@
+        <div class="cartao">
+            <img src="~/img/pagamento.png" />
+
+        </div>
+
     </div>
 
     <!--Conteudo-->
@@ -186,24 +202,11 @@
 
     </div>
 
-    <!--Investimento-->
-    <div class="caixa-investimento">
 
-        <h1>Investimento</h1>
-        <div class="valor">
-            <strong><s>R$ 590,00</s> R$ 295,00 <span>(Pré-Lançamento)</span></strong>
-        </div>
-        <span class="juros">4x Sem Juros</span>
-        <a href="https://mpago.la/1NKNCTH">Garanta 50% OFF no Pré-Lançamento</a>
-        <span class="obs">* Promoção Válida apenas para o Pré-Lançamento, após lançamento o valor voltará a ser R$ 590,00.</span>
-        <div class="cartao">
-            <img src="~/img/pagamento.png" />
-
-        </div>
-
-    </div>
 </div>
-
+<footer>
+    Copyright © 2021 | Desenvolvido por  Produkt 
+</footer>
 
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
