--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -440,10 +440,40 @@ footer {
             transition: background-color 1000ms linear;
         }
 
+        .cadastro {
+            margin-top: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
 
-    .icon {
-        width: 70px;
+            .cadastro span {
+                cursor: pointer;
+                font-size: 25px;
+            }
+
+                .cadastro span:hover {
+                    color: #d7b3b5;
+                }
+
+    .volta-cadastrar {
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+
+        .volta-cadastrar a {
+            color: #fff;
+            text-decoration: none;
+            cursor: pointer;
+            font-size: 25px;
+        }
+
+
+        .icon {
+            width: 70px;
+        }
 
     .vantagens {
         border-radius: 10px;
