--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -6,7 +6,9 @@
     outline: 0;
 }
 
-
+.white {
+    color: #fff;
+}
 
 button {
     cursor: pointer;
@@ -346,6 +348,19 @@ footer {
     }
 
         header img {
+            margin-bottom: 10px;
+        }
+
+        .contagem {
+            padding: 10px;
+            color: #797778;
+            font-weight: 600;
+            background: #d7b3b5;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-size: 2rem;
             margin-bottom: 10px;
         }
 
