--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
 </header>
 <div class="container">
 
-    @*<div class="contagem">
+    <div class="contagem">
         <div>
             <span><i class="far fa-clock"></i></span>
             <span id="dia"></span>
@@ -48,10 +48,10 @@
 
         </div>
         <div>
-            <span> 50% OFF</span>
+            <span> 30% OFF</span>
 
         </div>
-    </div>*@
+    </div>
     <!--Video e Form-->
     <div>
         @Html.ValidationSummary(true)
@@ -345,31 +345,31 @@
     });
 
 
-    //var target_date = new Date("january 11, 2021").getTime();
-    //var dias, horas, minutos, segundos;
-    //var regressiva = document.getElementById("regressiva");
+    var target_date = new Date("january 18, 2021").getTime();
+    var dias, horas, minutos, segundos;
+    var regressiva = document.getElementById("regressiva");
 
-    //setInterval(function () {
+    setInterval(function () {
 
-    //    var current_date = new Date().getTime();
-    //    var segundos_f = (target_date - current_date) / 1000;
+        var current_date = new Date().getTime();
+        var segundos_f = (target_date - current_date) / 1000;
 
-    //    dias = parseInt(segundos_f / 86400);
-    //    segundos_f = segundos_f % 86400;
+        dias = parseInt(segundos_f / 86400);
+        segundos_f = segundos_f % 86400;
 
-    //    horas = parseInt(segundos_f / 3600);
-    //    segundos_f = segundos_f % 3600;
+        horas = parseInt(segundos_f / 3600);
+        segundos_f = segundos_f % 3600;
 
-    //    minutos = parseInt(segundos_f / 60);
-    //    segundos = parseInt(segundos_f % 60);
+        minutos = parseInt(segundos_f / 60);
+        segundos = parseInt(segundos_f % 60);
 
-    //    document.getElementById('dia').innerHTML = dias;
-    //    document.getElementById('hora').innerHTML = horas;
-    //    document.getElementById('minuto').innerHTML = minutos;
-    //    document.getElementById('segundo').innerHTML = segundos;
+        document.getElementById('dia').innerHTML = dias;
+        document.getElementById('hora').innerHTML = horas;
+        document.getElementById('minuto').innerHTML = minutos;
+        document.getElementById('segundo').innerHTML = segundos;
 
 
-    //}, 1000);
+    }, 1000);
 
 </script>
 
